--- a/app/globals.css
+++ b/app/globals.css
@@ -274,7 +274,7 @@ body {
 }
 
 .story__container {
-  @apply relative flex flex-col text-white items-center w-full h-full bg-black pt-[4em] md:pt-[8em] lg:pt-[4em];
+  @apply relative flex flex-col text-white items-center w-full h-full bg-black pt-[4em];
 }
 
 .story__content {
@@ -282,7 +282,7 @@ body {
 }
 
 .story__title {
-  @apply text-[3em] md:text-[6em] lg:text-[3em] text-[orange] font-[CremeEspana];
+  @apply text-[3em] md:text-[3em] lg:text-[3em] text-[orange] font-[CremeEspana];
 }
 
 .scrollicon {
@@ -382,20 +382,16 @@ body {
   }
 }
 
-@media only screen and (max-width: 380px) {
-  .story__title {
-    font-size: 2.5em;
-  }
-  .storyitem__title {
-    font-size: 1.2em;
-  }
-  .storyitem__pic {
-    width: 100%;
-    height: 18em;
+@media only screen and (max-width: 840px) {
+  .storyitem__pic{
+    height: 36em;
   }
 }
 
 @media only screen and (max-width: 480px) {
+  .storyitem__pic {
+    height: auto;
+  }
   .pic4 {
     top: 20%;
     left: 10%;
@@ -436,5 +432,18 @@ body {
       26% 55%,
       0% 46%
     );
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .story__title {
+    font-size: 2.5em;
+  }
+  .storyitem__pic {
+    width: 100%;
+    height: 16em;
+  }
+  .storyitem__title {
+    font-size: 1.2em;
   }
 }
